# Kaboem

./: CMakeLists.txt  LICENSE  README.md  agc.cpp  agc.h  demo.kaboem  demo3.kaboem  demo4.kaboem  filter.cpp  filter.h  font.cpp  font.h  frequencies.cpp  frequencies.h  gui.cpp  gui.h  io.cpp  io.h  kaboem.desktop  kaboem.spec  kaboem.yml  midi.cpp  midi.h  pipewire-audio.cpp  pipewire-audio.h  pipewire.cpp  player.cpp  player.h  sample.cpp  sample.h  sound.cpp  sound.h  time.cpp  time.h  todo
debian/: changelog  control
demos/: demo2.kaboem  demo5.kaboem  viezig.kaboem
